--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ publish = false
 
 [dependencies]
 rand = "0.5.0"
+piston = "0.37.0"
+piston_window = "0.80.0"
+image = "0.19.0"
+gfx = "0.17.1"
+gfx_device_gl = "0.15.0"
