--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,8 @@ version = "0.1.0"
 authors = ["Marcin R <mr.omnia.dev@gmail.com>"]
 publish = false
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
 rand = "0.5.0"
-piston = "0.37.0"
-piston_window = "0.80.0"
-image = "0.19.0"
-gfx = "0.17.1"
-gfx_device_gl = "0.15.0"
